--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,18 @@
 /* style.css */
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 /*============== <Global> ==============*/
+h1, h2 {
+  text-transform: uppercase;
+  text-shadow: 0 2px 3px red;
+  letter-spacing: 3px;
+  font-size: 1.2rem;
+  font-family: 'Indie Flower', cursive;
+  border-radius: 10px;
+  animation: header 5s ease-in infinite alternate; }
+
+h2 {
+  font-size: 30px; }
+
 ul {
   list-style: none; }
 
@@ -74,12 +87,52 @@ body {
     color: #fff; }
   #login-dp .bottom {
     background-color: inherit;
-    border-top: 0 none; } }
+    border-top: 0 none; }
+  .navbar-form {
+    margin-left: 100px; } }
 
 /*============== <home> ============================================*/
 /*============== <header> ==============*/
+.main-header {
+  text-transform: uppercase;
+  text-shadow: 0 2px 3px red;
+  letter-spacing: 3px;
+  font-size: 1.2rem;
+  font-family: 'Indie Flower', cursive;
+  padding: 10px;
+  border-radius: 10px;
+  animation: header 5s ease-in infinite alternate; }
+
+.main-wrap {
+  position: relative; }
+
+.main-gif {
+  position: absolute;
+  width: 60px;
+  bottom: 70px;
+  left: 0;
+  animation: gifWalk 30s linear infinite; }
+
+@keyframes gifWalk {
+  0% {
+    transform: translateX(0) scaleX(-1);
+    opacity: 1; }
+  95% {
+    opacity: 0.8; }
+  100% {
+    transform: translateX(1040px) scaleX(-1);
+    opacity: 0; } }
+
+@keyframes header {
+  from {
+    color: white;
+    text-shadow: 0 2px 3px red; }
+  to {
+    color: red;
+    text-shadow: 0 2px 5px red; } }
+
 .jumbotron {
-  background: #212420;
+  background: rgba(27, 59, 23, 0.3);
   background-size: cover;
   padding-bottom: 390px;
   border-radius: 10px; }
@@ -92,6 +145,13 @@ body {
   background-color: #212420;
   height: 435px;
   position: relative; }
+  .well:hover {
+    transform: scale(1.1, 1.1);
+    z-index: 100;
+    transition: all 1s ease-in;
+    border-color: #771212;
+    box-shadow: 0 0 5px #a80f0f;
+    background: rgba(47, 117, 19, 0.3); }
 
 @media (min-width: 960px) {
   #results .col-md-2 .img {
@@ -108,12 +168,6 @@ form {
   justify-content: center; }
 
 /*============== <moviesAll> ==============*/
-/* Create three equal columns that floats next to each other */
-.col {
-  float: left;
-  width: 33.33%;
-  padding: 10px; }
-
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -125,17 +179,18 @@ form {
 
 .details {
   position: absolute;
-  bottom: 35px;
+  bottom: 45px;
   right: 70px; }
 
 .inline-block {
   display: inline-block;
   position: absolute;
-  bottom: 5px; }
+  bottom: 0px; }
   .inline-block.right {
     right: 70px; }
   .inline-block.left {
-    left: 80px; }
+    left: 80px;
+    bottom: 14px; }
 
 #btn-add {
   color: #1f1818;
