--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -26,10 +26,10 @@
       <button class="btn btn-dark">Create account</button>
       <br> <br>
       <p class="account-message">
-        Have an account? <a class="btn btn-dark" href="/login">Log in</a>
+        Have an account? <a class="btn btn-dark" href="/login">Sign in</a>
       </p>
       <p class="account-message">
-       logIn with google <a class="btn btn-google" href="/auth/google"> Google</a>
+       Sign in with google <a class="btn btn-google" href="/auth/google"> Google</a>
       </p>
     </form>
 </div>
