--- a/views/cinema/new.hbs
+++ b/views/cinema/new.hbs
@@ -1,7 +1,7 @@
 
 
 
-Hello creation
+<h2>Creation New Link</h2>
 
 <div class="location-center">
     <form id="form" action="/cinema/new" method="POST">
