--- a/views/cinema/userCinema.hbs
+++ b/views/cinema/userCinema.hbs
@@ -1,8 +1,8 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <h2>Welcome to {{title}}</h2> --}}
 
 <a class="btn btn-dark" href="cinema/new">Add New</a>
-<h1 class="location-center">Cinema</h1>
+<h2 class="location-center">Cinema</h2>
 
 <div class="container"></div>
   {{#each listOfCinemas}}
