changed bcrypt to bcryptjs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="main-wrap">
           <img class="main-gif" src="/images/skoll.gif" alt="main-gif">
-        <h1 class="main-header">Welcome To Movies Are My LIfe App</h1>
+        <h1 class="main-header">Welcome To Movies Are My Life App</h1>
         </div>
 
 {{!-- <h1>{{movies}}</h1> --}}
