--- a/views/cinema/userCinema.hbs
+++ b/views/cinema/userCinema.hbs
@@ -16,7 +16,7 @@
          </form>
          <br>
          <form action="/userCinema/delete/{{this._id}}" method="POST">
-          <button class="btn-danger">Delete</button>
+          <button class="btn-danger" onclick="alert('Deleting Cinema')">Delete</button>
          </form>
     </div>
   </div>
