--- a/views/cinema/edit.hbs
+++ b/views/cinema/edit.hbs
@@ -14,6 +14,9 @@
         <label for="siteLink">siteLink</label>
         <input class="form-control" type="text" name="link" value="{{theLink.siteLink}}">
 
+        <label for="poster">Poster</label>
+        <input class="form-control" type="file" name="photo">
+
         <button class="btn btn-dark">Edit Link</button>
         <br> <br>
     </form>
