changed huruku db

--- a/views/cinema/userCinema.hbs
+++ b/views/cinema/userCinema.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 {{!-- <h2>Welcome to {{title}}</h2> --}}
 
-<a class="btn btn-dark" href="cinema/new">Add New</a>
+<a class="btn btn-dark" href="/new">Add New</a>
 <h2 class="location-center">Cinema</h2>
 
 <div class="container"></div>
