changed huruku db

--- a/views/cinema/cinema.hbs
+++ b/views/cinema/cinema.hbs
@@ -20,7 +20,7 @@
           <button class="btn-danger">Edit</button>
          </form>
          <br>
-         <form action="/cinema/delete/{{this._id}}" method="POST">
+         {{!-- <form action="/cinema/delete/{{this._id}}" method="POST"> --}}
           <button class="btn-danger" onclick="alert('Deleting Cinema')" >Delete</button>
          </form>
     </div>
