fixed bug, redirect to added page

--- a/views/movies/editMovie.hbs
+++ b/views/movies/editMovie.hbs
@@ -28,12 +28,12 @@ console.log("-=xxxxxxxxxxxxxxxxxxxxx");
             <h5>link.com</h5><!-- place for new element Link-->
           </div>
 
-         <section class="create">
+         {{!-- <section class="create">
           <ul>
             <li><input class="input-pruduct-name" type="text" placeholder="Link Address" /></li>
             <li><button onclick="addLink('{{this.Title}},{{this.imdbID}},{{this.Poster}},{{this.Year}},m')" type="submit" id="btn-add">Must Watch</button><button class="btn btn-dark btn-create" id="new-item-create">Add</button></li>
           </ul>
-         </section>
+         </section> --}}
         {{!-- ================================================================ --}}
 
 <div class="container">
