--- a/views/movies/editMovie.hbs
+++ b/views/movies/editMovie.hbs
@@ -23,12 +23,12 @@ console.log("-=xxxxxxxxxxxxxxxxxxxxx");
 
 </script>
 <!-- ================== End Scripts  ===================== -->
-        {{!-- ============================= NEW =================================== --}}
-          <div class="new-product">
+        {{!-- ============================= NEW For axios, using real time link addition view =================================== --}}
+          {{!-- <div class="new-product">
             <h5>link.com</h5><!-- place for new element Link-->
           </div>
 
-         {{!-- <section class="create">
+         <section class="create">
           <ul>
             <li><input class="input-pruduct-name" type="text" placeholder="Link Address" /></li>
             <li><button onclick="addLink('{{this.Title}},{{this.imdbID}},{{this.Poster}},{{this.Year}},m')" type="submit" id="btn-add">Must Watch</button><button class="btn btn-dark btn-create" id="new-item-create">Add</button></li>
