added some styling tweeks

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,7 +109,7 @@ body {
 .main-gif {
   position: absolute;
   width: 60px;
-  bottom: 70px;
+  bottom: 65px;
   left: 0;
   animation: gifWalk 30s linear infinite; }
 
@@ -148,7 +148,7 @@ body {
   .well:hover {
     transform: scale(1.1, 1.1);
     z-index: 100;
-    transition: all 1s ease-in;
+    transition: all 2s ease-in;
     border-color: #771212;
     box-shadow: 0 0 5px #a80f0f;
     background: rgba(47, 117, 19, 0.3); }
@@ -177,7 +177,7 @@ form {
 #movie {
   width: 70%; }
 
-.details {
+.select-links {
   margin-bottom: 5px; }
 
 .inline-block {
