--- a/views/movies/addMovie.hbs
+++ b/views/movies/addMovie.hbs
@@ -4,7 +4,7 @@
   <div class="row">
 
     {{!-- In construction --}}
-    <div class="col">
+    <div class="col-12 col-md-4">
       <div class="location-center">
         {{!-- <form action="/movies/addMovie" method="POST" enctype="multipart/form-data">
           <h5>Add a link to this movie from cinema</h5>
@@ -19,7 +19,7 @@
     </div>
 
 
-      <div class="col">
+      <div class="col-12 col-md-4">
         <form action="/movies/addMovie" method="POST" enctype="multipart/form-data">
           <h2>Add a New Movie To The Library</h2>
 
@@ -48,7 +48,7 @@
       </div>
 
     
-    <div class="col">
+    <div class="col-12 col-md-4">
       <label for="links">Cinema links</label>
       <div class="location-center">
 
