--- a/views/movies/favorites.hbs
+++ b/views/movies/favorites.hbs
@@ -14,13 +14,13 @@
     <img id="movie" src="{{this.image}}" alt="Movie Poster">
     {{/if}}
        <h5>{{this.title}} (year{{this.year}})</h5>
-       <select class="form-control" name="openNewPage" onchange="window.open(this.value, '_blank', 'shilpijain' ,'modal=no');">
+       <select class="select-links form-control" name="openNewPage" onchange="window.open(this.value, '_blank', 'shilpijain' ,'modal=no');">
           <option value="">Select Link</option>
           {{#each this.links}}
           <option value="{{this}}">{{this}}</option>
           {{/each}}
        </select>
-       <a class="details btn btn-dark" href="http://imdb.com/title/{{this.imdbID}}" target="_blank" >Movie Details</a>
+       <a class="btn btn-dark" href="http://imdb.com/title/{{this.imdbID}}" target="_blank" >Movie Details</a>
        <a class="inline-block left" href="/movies/editMovie/{{this._id}}">
         <button class="btn-danger">Edit</button>
        </a>
