--- a/views/movies/moviesAll.hbs
+++ b/views/movies/moviesAll.hbs
@@ -14,7 +14,7 @@
     <img id="movie" src="{{this.image}}" alt="Movie Poster">
     {{/if}}
        <h5>{{this.title}}(year{{this.year}})</h5>
-       <select class="details form-control" name="openNewPage" onchange="window.open(this.value, '_blank', 'shilpijain' ,'modal=no');">
+       <select class="select-links form-control" name="openNewPage" onchange="window.open(this.value, '_blank', 'shilpijain' ,'modal=no');">
           <option value="">Select Link</option>
           {{#each this.links}}
           <option value="{{this}}">{{this}}</option>
