--- a/views/movies/editMovie.hbs
+++ b/views/movies/editMovie.hbs
@@ -85,7 +85,7 @@ console.log("-=xxxxxxxxxxxxxxxxxxxxx");
       <label for="links">Cinema links</label>
       <div class="location-center">
 
-        <select class="form-control" name="openNewPage" onchange="window.open(this.value, '_blank', 'shilpijain' ,'modal=no');">
+        <select class="form-control" name="openNewPage" onchange="window.open(this.value, '_blank');">
           <option value="">Select Cinema</option>
           {{#each links}}
           {{!-- {{theMovie.title}} used ../ to get ut of the #each!!!!! --}}
